force-app/main/default/objects/Travaux__c/Travaux__c.object-meta.xml
<CustomObject>
    <label>Travaux</label>
    <nameField>
        <label>Nom de Travaux</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travaux</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>