force-app/main/default/objects/Travaux__c/fields/Adresse_de_facturation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_facturation__c</fullName>
    <label>Adresse de facturation</label>
    <type>Address</type>
</CustomField>