force-app/main/default/objects/Travaux__c/fields/Cout_humain__c.field-meta.xml
<CustomField>
    <fullName>Cout_humain__c</fullName>
    <label>Coût humain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>