force-app/main/default/objects/Travaux__c/fields/Cout_materiel__c.field-meta.xml
<CustomField>
    <fullName>Cout_materiel__c</fullName>
    <label>Coût matériel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>