force-app/main/default/objects/Travaux__c/fields/Facture_electricite__c.field-meta.xml
<CustomField>
    <fullName>Facture_electricite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture électricité</label>
    <type>Checkbox</type>
</CustomField>