force-app/main/default/objects/Travaux__c/fields/Marge_brute__c.field-meta.xml
<CustomField>
    <fullName>Marge_brute__c</fullName>
    <label>Marge brute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>