force-app/main/default/objects/Travaux__c/fields/Nom_du_compte__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Travaux</relationshipLabel>
    <relationshipName>Travaux</relationshipName>
    <type>Lookup</type>
</CustomField>