force-app/main/default/objects/Travaux__c/fields/NumeroDeCommande__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeCommande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Numéro de commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Travaux</relationshipLabel>
    <relationshipName>Travaux</relationshipName>
    <type>Lookup</type>
</CustomField>