force-app/main/default/objects/Travaux__c/fields/Pose__c.field-meta.xml
<CustomField>
    <fullName>Pose__c</fullName>
    <label>Pose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>