force-app/main/default/objects/Travaux__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intervention</fullName>
            </value>
            <value>
                <fullName>Consuel</fullName>
            </value>
            <value>
                <fullName>Déblocage du financement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>